# acb-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
scripts/: start.sh
src/: main.py
src/api/: dependencies.py
src/api/routes/: __init__.py  batteries.py  bind.py  devices.py
src/core/: paths.py  settings.py
src/db/: postgres.py  tables.py
src/db/repositories/: battaries.py  devices.py
src/migrations/: env.py
src/models/: __init__.py  battaries.py  batteries.py  bind.py  devices.py
src/services/: __init__.py  battaries.py  batteries.py  bind.py  devices.py
